default card align fix

--- a/src/Components/DefaultCard/DefaultCard.css
+++ b/src/Components/DefaultCard/DefaultCard.css
@@ -9,10 +9,9 @@
     z-index: 0;
   }
 
-  .card-img-caption{
-    width: 20rem;
-    height: 15rem;
-    overflow: hidden;
+  .defaultCard{
+    display: flex;
+    justify-content: center;
   }
 
   .card-img-top{
